# chordsketch

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ChordSketch Design System.html  DESIGN.md  Dockerfile  Dockerfile.release  LICENSE  NOTICE  README.md  SECURITY.md  codecov.yml  flake.nix  latest.json  tokens.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
crates/chordpro/: Cargo.toml  README.md
crates/chordpro/examples/: multi_song.rs  parse_song.rs  transpose.rs
crates/chordpro/src/: abc_importer.rs  ast.rs  chord.rs  chord_diagram.rs  config.rs  directive_catalog.rs  escape.rs  external_tool.rs  formatter.rs  grid.rs  heuristic.rs  image_path.rs  inline_markup.rs  json.rs  key.rs  lexer.rs  lib.rs  notation.rs  parser.rs  render_result.rs  rrjson.rs  selector.rs  token.rs  transpose.rs  typography.rs  voicing_synth.rs  voicings.rs
crates/chordpro/tests/: chord_notation_golden.rs  golden.rs  golden_abc.rs  golden_directives.rs  golden_errors.rs  golden_formatter.rs  golden_heuristic.rs  golden_meta.rs  golden_multi_song.rs
crates/chordpro/tests/error_fixtures/unclosed-chord/: expected_error.txt
crates/chordpro/tests/fixtures/: short_aliases.cho  standard_directives.cho
crates/chordpro/tests/fixtures/abc-basic-conversion/: expected.cho  input.abc
crates/chordpro/tests/fixtures/abc-text-tempo/: input.abc
crates/chordpro/tests/fixtures/chords-in-lyrics/: expected.txt
crates/chordpro/tests/fixtures/chorus-recall/: expected.txt  input.cho
crates/chordpro/tests/fixtures/config-override/: expected.txt  input.cho
crates/chordpro/tests/fixtures/custom-sections/: expected.txt
crates/chordpro/tests/fixtures/define-chord-directives/: expected.txt  input.cho
crates/chordpro/tests/fixtures/define-copy-display/: expected.txt
crates/chordpro/tests/fixtures/define-copyall-fingers/: expected.txt  input.cho
crates/chordpro/tests/fixtures/define-display-keys/: expected.txt  input.cho
crates/chordpro/tests/fixtures/define-transposable/: expected.txt  input.cho
crates/chordpro/tests/fixtures/delegate-environments/: expected.txt
crates/chordpro/tests/fixtures/diagrams-directive/: expected.txt  input.cho
crates/chordpro/tests/fixtures/diagrams-piano/: expected.txt  input.cho
crates/chordpro/tests/fixtures/directives/: expected.txt  input.cho
crates/chordpro/tests/fixtures/font-size-color-directives/: expected.txt  input.cho
crates/chordpro/tests/fixtures/format-basic/: expected.txt  expected_formatted.cho  input.cho
crates/chordpro/tests/fixtures/format-comment-lines/: expected.txt  expected_formatted.cho  input.cho
crates/chordpro/tests/fixtures/formatting-directives/: expected.txt  input.cho
crates/chordpro/tests/fixtures/grid-verbatim/: expected.txt  input.cho
crates/chordpro/tests/fixtures/heuristic-basic/: expected.cho  input.txt
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/cli/tests/fixtures/: config-override.cho  invalid.cho  plain.txt  second.cho  simple.abc  simple.cho  simple.xml
crates/convert/: Cargo.toml  README.md  known-deviations.md
crates/convert-musicxml/: Cargo.toml  README.md
crates/convert-musicxml/src/: export.rs  import.rs  lib.rs  xml.rs
crates/convert-musicxml/tests/: integration_test.rs
crates/convert-musicxml/tests/fixtures/: metadata.xml  sections.xml
crates/convert/src/: error.rs  from_ireal.rs  ireal.rs  lib.rs  to_ireal.rs
crates/convert/tests/: from_ireal.rs  scaffold.rs
crates/core/: Cargo.toml  README.md
crates/core/examples/: multi_song.rs  parse_song.rs  transpose.rs
crates/core/src/: abc_importer.rs  ast.rs  chord.rs  chord_diagram.rs  config.rs  escape.rs  external_tool.rs  formatter.rs  heuristic.rs  image_path.rs  inline_markup.rs  lexer.rs  lib.rs  notation.rs  parser.rs  render_result.rs  rrjson.rs  selector.rs  transpose.rs  voicings.rs
crates/core/tests/: chord_notation_golden.rs  golden.rs  golden_directives.rs  golden_errors.rs  golden_heuristic.rs  golden_meta.rs  golden_multi_song.rs
crates/core/tests/fixtures/: chord_notation.cho  short_aliases.cho
crates/ffi/: Cargo.toml  README.md  build.rs
crates/ffi/chordsketch/: __init__.py
crates/ffi/src/: chordsketch.udl  lib.rs
crates/ireal/: ARCHITECTURE.md  Cargo.toml  FORMAT.md  README.md
crates/ireal/src/: ast.rs  json.rs  lib.rs  parser.rs  serialize.rs
crates/ireal/tests/: ast.rs  json_errors.rs  parser.rs  parser_open_protocol.rs  serialize.rs
crates/lsp/: Cargo.toml  README.md
crates/lsp/src/: completion.rs  convert.rs  hover.rs  main.rs  server.rs
crates/lsp/tests/: integration.rs
crates/napi/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/napi/__tests__/: public-api.test.js  warning-routing.test.js
crates/napi/npm/darwin-arm64/: package.json
crates/napi/npm/darwin-x64/: package.json
crates/napi/npm/linux-arm64-gnu/: package.json
crates/napi/npm/linux-x64-gnu/: package.json
crates/napi/npm/win32-x64-msvc/: package.json
crates/napi/scripts/: local-publish.sh
crates/napi/src/: bindings.rs  lib.rs
crates/render-html/: Cargo.toml  README.md
crates/render-html/src/: bravura.rs  lib.rs  music_glyphs.rs
crates/render-html/tests/: golden.rs  golden_image.rs  golden_svg_section.rs
crates/render-ireal/: Cargo.toml  README.md
crates/render-ireal/src/: barlines.rs  bravura.rs  chord_format.rs  chord_typography.rs  layout.rs  lib.rs  markers.rs  music_symbols.rs  page.rs  pdf.rs  png.rs  staff_texts.rs  svg.rs
crates/render-ireal/tests/: golden.rs  pdf.rs  png.rs  progressions.rs
crates/render-pdf/: Cargo.toml  README.md
crates/render-pdf/src/: lib.rs
crates/render-pdf/tests/: golden.rs
crates/render-text/: Cargo.toml  README.md
crates/render-text/examples/: render_text.rs
crates/render-text/src/: lib.rs
crates/render-text/tests/: golden.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: bindings.rs  lib.rs
(+503 files in other folders)
