[workspace]
members = [
    "crates/chordpro",
    "crates/ireal",
    "crates/render-text",
    "crates/render-html",
    "crates/render-pdf",
    "crates/render-ireal",
    "crates/cli",
    "crates/lsp",
    "crates/wasm",
    "crates/napi",
    "crates/ffi",
    "crates/convert",
    "crates/convert-musicxml",
    "apps/desktop/src-tauri",
]
# Excludes `apps/desktop/src-tauri` from default workspace operations.
# Tauri's transitive deps pull in webkit2gtk on Linux and WebView2 on
# Windows, which are not available on a bare contributor machine. CI
# installs those libs in the dedicated `desktop-smoke` job, and the
# cross-platform matrix tracked by #2077 owns the full release build.
#
# Maintenance note: when you add a new member under `crates/*`, add it
# to BOTH `members` above AND to `default-members` below, otherwise
# bare `cargo build` / `cargo test` from the repo root will silently
# stop covering the new crate.
default-members = [
    "crates/chordpro",
    "crates/ireal",
    "crates/render-text",
    "crates/render-html",
    "crates/render-pdf",
    "crates/render-ireal",
    "crates/cli",
    "crates/lsp",
    "crates/wasm",
    "crates/napi",
    "crates/ffi",
    "crates/convert",
    "crates/convert-musicxml",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["koedame <koedame@users.noreply.github.com>"]
repository = "https://github.com/koedame/chordsketch"
homepage = "https://github.com/koedame/chordsketch"
keywords = ["chordpro", "music", "chord", "parser", "lyrics"]
categories = ["parser-implementations", "text-processing"]

# Release profile tuned for binary size. The wasm bundle (#2466) is
# the most size-sensitive distribution artefact in this workspace —
# every byte of `chordsketch_wasm_bg.wasm` is paid by every browser
# / playground load over the wire. The same opts also shrink the CLI
# and the FFI / napi cdylib outputs which ship as platform packages
# (Homebrew bottle, Snap, Scoop, MacPorts, GHCR image, prebuilt napi
# binaries) — distribution wins for every channel, at a small (<5%)
# runtime-speed cost vs `opt-level = 3`.
#
# Per-key rationale:
#   opt-level = "z"  — optimise for size; "s" gives ~5% larger binary
#                      and ~5% faster runtime, "z" is the right pick
#                      because we pay the size every download but the
#                      runtime cost only on the hot rendering loop
#                      which is already O(parse + walk).
#   lto = "fat"      — cross-crate inlining + dead-code removal,
#                      typically -20-30% on the wasm binary alone.
#   codegen-units    — single-unit codegen lets LTO see everything;
#     = 1              required to get the full LTO benefit.
#   strip = "symbols" — drops debug + linker symbols. Stack traces on
#                       wasm are still derivable via wasm-bindgen's
#                       name section (preserved separately by
#                       wasm-bindgen-cli when present).
#   panic            — kept at "unwind" (cargo default) so the
#                       wasm `console_error_panic_hook` and the
#                       CLI's `Result`-returning paths still see
#                       structured panic info; switching to "abort"
#                       would save a further ~5-10% but breaks the
#                       diagnostic chain on parse-error reports.
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
