[package]
name = "chordsketch-chordpro"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ChordPro parser, AST, and transforms"
readme = "README.md"

[dependencies]
# This crate has ZERO external dependencies — normal, dev, AND build.
# See CLAUDE.md "Dependency Policy", `.claude/rules/code-style.md`, and
# the `external_tool` module's stdlib-only `TempDirGuard`. The invariant
# is enforced in CI by `scripts/check-zero-deps.py`; tests use the
# stdlib-only temp-directory helper in `config.rs` rather than `tempfile`.
