[package]
name = "chordpro-rs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "text-processing"]
description = "ChordPro command-line tool"
readme = "README.md"

[[bin]]
name = "chordpro"
path = "src/main.rs"

[dependencies]
chordpro-core = { version = "0.1.0", path = "../core" }
chordpro-render-text = { version = "0.1.0", path = "../render-text" }
chordpro-render-html = { version = "0.1.0", path = "../render-html" }
chordpro-render-pdf = { version = "0.1.0", path = "../render-pdf" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
