[package]
name = "chordsketch"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "text-processing"]
description = "ChordPro command-line tool"
readme = "README.md"

[[bin]]
name = "chordsketch"
path = "src/main.rs"

[dependencies]
chordsketch-core = { version = "0.2.0", path = "../core" }
chordsketch-render-text = { version = "0.2.0", path = "../render-text" }
chordsketch-render-html = { version = "0.2.0", path = "../render-html" }
chordsketch-render-pdf = { version = "0.2.0", path = "../render-pdf" }
chordsketch-convert-musicxml = { version = "0.2.0", path = "../convert-musicxml" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
