[package]
name = "chordsketch-convert-musicxml"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["musicxml", "chordpro", "music", "converter"]
categories = ["parser-implementations", "text-processing"]
readme = "README.md"
description = "MusicXML ↔ ChordPro bidirectional converter"

[dependencies]
chordsketch-chordpro = { version = "0.4.0", path = "../chordpro" }
