[package]
name = "chordsketch-core"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ChordPro parser, AST, and transforms"
readme = "README.md"

[dependencies]

[dev-dependencies]
tempfile = "3"
