[package]
name = "chordsketch-ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "UniFFI bindings for ChordPro parsing and rendering"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
chordsketch-core = { version = "0.1.0", path = "../core" }
chordsketch-render-text = { version = "0.1.0", path = "../render-text" }
chordsketch-render-html = { version = "0.1.0", path = "../render-html" }
chordsketch-render-pdf = { version = "0.1.0", path = "../render-pdf" }
# `uniffi` is pinned to an exact patch version because the .udl + scaffolding
# generated layout is part of the FFI surface — Python/Swift/Kotlin/Ruby
# bindings depend on the binary being byte-compatible with the bindgen output.
# Caret ranges (`"0.31"`) would let a patch with a layout change land via a
# casual `cargo update` and silently break consumers. Bump intentionally via
# Dependabot or a tracked PR. See #1078.
uniffi = { version = "=0.31.0", features = ["cli"] }
thiserror = "2"

[build-dependencies]
uniffi = { version = "=0.31.0", features = ["build"] }
