[package]
name = "chordsketch-ireal"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "iReal Pro AST types and a zero-dep JSON debug serializer / parser"
readme = "README.md"

[dependencies]

[dev-dependencies]
