[package]
name = "chordsketch-lsp"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Language Server Protocol server for ChordPro files"

[[bin]]
name = "chordsketch-lsp"
path = "src/main.rs"

[dependencies]
chordsketch-core = { version = "0.2.0", path = "../core" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt", "macros", "io-std"] }
