[package]
name = "chordsketch-lsp"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["development-tools", "text-processing"]
readme = "README.md"
description = "Language Server Protocol server for ChordPro files"

[[bin]]
name = "chordsketch-lsp"
path = "src/main.rs"

[dependencies]
chordsketch-chordpro = { version = "0.3.0", path = "../chordpro" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt", "macros", "io-std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde_json = "1"
