[package]
name = "chordsketch-napi"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Native Node.js addon for ChordPro parsing and rendering via napi-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
chordsketch-core = { version = "0.2.0", path = "../core" }
chordsketch-render-text = { version = "0.2.0", path = "../render-text" }
chordsketch-render-html = { version = "0.2.0", path = "../render-html" }
chordsketch-render-pdf = { version = "0.2.0", path = "../render-pdf" }
# `napi` and `napi-derive` are pinned to exact patch versions because the
# `#[napi]` macro emits ABI-sensitive C glue against the Node-API ABI.
# Caret ranges (`"3"`) would let a 3.5 release land via a casual `cargo
# update` with potentially incompatible glue. Bump intentionally via
# Dependabot or a tracked PR. See #1078.
napi = { version = "=3.4.0", features = ["napi9"] }
napi-derive = "=3.3.0"

[build-dependencies]
napi-build = "=2.2.4"
