[package]
name = "chordsketch-render-html"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTML renderer for ChordPro documents"
readme = "README.md"

[dependencies]
chordsketch-core = { version = "0.2.0", path = "../core" }
