[package]
name = "chordsketch-render-html"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTML renderer for ChordPro documents"
readme = "README.md"

[dependencies]
chordsketch-chordpro = { version = "0.4.0", path = "../chordpro" }
