[package]
name = "chordsketch-render-html"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
# Override the workspace's plain `MIT` because the crate ships
# Bravura SMuFL glyph outlines (`src/bravura.rs`) under SIL OFL-1.1
# alongside the MIT-licensed Rust source. SPDX `AND` reflects that
# downstream consumers must comply with both terms.
# Attribution: NOTICE (project root) + LICENSE-OFL.txt + ADR-0014.
license = "MIT AND OFL-1.1"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTML renderer for ChordPro documents"
readme = "README.md"

[dependencies]
chordsketch-chordpro = { version = "0.5.0", path = "../chordpro" }
