[package]
name = "chordsketch-render-ireal"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["ireal", "chord", "music", "svg", "render"]
categories = ["rendering", "text-processing"]
description = "iReal Pro chart renderer (SVG skeleton)"
readme = "README.md"

[dependencies]
chordsketch-ireal = { version = "0.3.0", path = "../ireal" }

# `resvg` and `tiny-skia` are pulled in only when the `png` feature is
# enabled. Without the gate the default build stays at the same lean
# transitive-dep surface as the SVG-only renderer (just
# `chordsketch-ireal`); turning the feature on adds the SVG parser
# (`usvg`, re-exported by `resvg`) and the rasteriser (`tiny-skia`)
# plus their image-encoding stack. The renderer-crate dependency
# carve-out in `CLAUDE.md` ("minimal external crates when justified")
# applies here because pure-Rust SVG rasterisation has no zero-dep
# alternative, and the feature gate keeps the cost off any caller
# that does not need PNG output.
#
# Pinned to 0.45.x (resvg) and 0.11.x (tiny-skia) because the
# 0.46.0 / 0.47.0 line bumps the resvg MSRV to 1.87, but this
# workspace's `rust-version = "1.85"` (set in the top-level
# `[workspace.package]`) is exercised by the CI test matrix.
# Lifting either pin requires raising the workspace MSRV first.
resvg = { version = "0.45", optional = true }
tiny-skia = { version = "0.11", optional = true }

[features]
# Enables the `render_png` function. Off by default to keep the
# transitive-dep surface small for the SVG-only common case.
png = ["dep:resvg", "dep:tiny-skia"]
