[package]
name = "chordsketch-render-ireal"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
# Override the workspace's plain `MIT` because the crate ships
# Bravura SMuFL glyph outlines (`src/bravura.rs`) under SIL OFL-1.1
# alongside the MIT-licensed Rust source. SPDX `AND` reflects that
# downstream consumers must comply with both terms.
# Attribution: NOTICE (project root) + LICENSE-OFL.txt + ADR-0014.
license = "MIT AND OFL-1.1"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["ireal", "chord", "music", "svg", "render"]
categories = ["rendering", "text-processing"]
description = "iReal Pro chart renderer (SVG skeleton)"
readme = "README.md"

[dependencies]
chordsketch-ireal = { version = "0.4.0", path = "../ireal" }

# `resvg` / `tiny-skia` (PNG rasteriser, #2064) and `svg2pdf` (PDF
# converter, #2063) are pulled in only when the corresponding
# feature is enabled. Without either gate the default build stays
# on the lean single-dep transitive surface (just
# `chordsketch-ireal`).
#
# All three are pinned to versions that share a usvg 0.43 line so
# enabling both features does not bring two unrelated `usvg`
# trees into the dep graph (svg2pdf 0.12 hard-requires resvg 0.43
# / usvg 0.43 / tiny-skia 0.11). Keeping the PNG side on the same
# 0.43 line as the PDF side means a single set of SVG-parsing
# crates, instead of one set per feature, when both are enabled.
#
# The renderer-crate dependency carve-out in `CLAUDE.md`
# ("minimal external crates when justified") covers each addition
# — pure-Rust SVG rasterisation and SVG-to-PDF conversion both
# have no zero-dep alternative, and the feature gates keep the
# cost off any caller that does not need raster / PDF output.
#
# Lifting the pin requires raising the workspace MSRV first
# (resvg 0.45+ requires Rust 1.87, the workspace pins 1.85).
resvg = { version = "0.45", optional = true }
tiny-skia = { version = "0.12", optional = true }
svg2pdf = { version = "0.13", optional = true }

[features]
# Enables the `render_png` function. Off by default to keep the
# transitive-dep surface small for the SVG-only common case.
png = ["dep:resvg", "dep:tiny-skia"]
# Enables the `render_pdf` function. Off by default for the same
# reason as `png`.
pdf = ["dep:svg2pdf"]
