[package]
name = "chordsketch-render-pdf"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "PDF renderer for ChordPro documents"
readme = "README.md"

[dependencies]
chordsketch-core = { version = "0.2.1", path = "../core" }
ttf-parser = { version = "0.25", default-features = false, features = ["std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
flate2 = { version = "1", default-features = false, features = ["zlib"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }
