[package]
name = "chordsketch-render-pdf"
version = "0.2.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "PDF renderer for ChordPro documents"
readme = "README.md"

[dependencies]
chordsketch-core = { version = "0.2.2", path = "../core" }
ttf-parser = { version = "0.25", default-features = false, features = ["std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
flate2 = { version = "1", default-features = false, features = ["zlib"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }

[dev-dependencies]
# Text extraction for unicode golden fixtures (#1983). Byte-exact snapshots
# are impractical when the input contains non-Latin1 characters because the
# bundled NotoSansCJK subset inflates the PDF to several megabytes. For
# those fixtures the harness extracts the PDF's text layer and compares
# against a small `expected.txt` snapshot instead. Dev-only, so the runtime
# crate stays minimal.
pdf-extract = "0.10"
