[package]
name = "chordpro-render-text"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Plain text renderer for ChordPro documents"
readme = "README.md"

[dependencies]
chordpro-core = { version = "0.1.0", path = "../core" }
unicode-width = "0.2.2"
