[package]
name = "chordsketch-render-text"
version = "0.2.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Plain text renderer for ChordPro documents"
readme = "README.md"

[dependencies]
chordsketch-chordpro = { version = "0.2.2", path = "../chordpro" }
unicode-width = "0.2.2"
