[package]
name = "chordsketch-wasm"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "WebAssembly bindings for ChordPro parsing and rendering"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chordsketch-core = { version = "0.2.0", path = "../core" }
chordsketch-render-text = { version = "0.2.0", path = "../render-text" }
chordsketch-render-html = { version = "0.2.0", path = "../render-html" }
chordsketch-render-pdf = { version = "0.2.0", path = "../render-pdf" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[dev-dependencies]
# Used by tests gated `#[cfg(target_arch = "wasm32")]` to exercise the
# actual `#[wasm_bindgen]` -> `JsValue` boundary that native `cargo test`
# cannot reach. Run via `wasm-pack test --node` (see `.github/workflows/wasm.yml`).
wasm-bindgen-test = "0.3"
js-sys = "0.3"
