[package]
name = "chordsketch-desktop"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
# Application-layer license per CLAUDE.md §License Policy ("future Forum,
# Playground, Desktop apps: AGPL-3.0-only"). SDK crates (everything under
# `crates/`) stay MIT via the workspace inheritance.
license = "AGPL-3.0-only"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "ChordSketch desktop application"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chordsketch-chordpro = { path = "../../../crates/chordpro" }
chordsketch-render-html = { path = "../../../crates/render-html" }
chordsketch-render-pdf = { path = "../../../crates/render-pdf" }
# `serde_json` is a transitive dep of tauri-plugin-updater whose
# types `generate_context!` expands against. Declaring it here is
# cosmetic (it would be in the graph anyway via the updater plugin),
# but the macro expansion needs the crate name to resolve in the
# current-crate root. Added alongside the updater plugin in #2076.
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[lints.rust]
# Guards against a workspace-linkage regression: if any of the SDK
# crates above are silently removed from the binary's dependency
# graph (e.g. all uses of `chordsketch_render_pdf::*` are deleted in
# a follow-up refactor), the build now warns instead of accepting a
# dead entry in Cargo.toml. Kept from #2069.
unused_crate_dependencies = "warn"
